# heat-exchanger-control

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  20250603_produktion_Test.csv  CITATION.cff  LICENSE  README.rst  pyproject.toml
.gitlab/issue_templates/: feature request.md  issue submission.md  user_story.md
.gitlab/merge_request_templates/: default.md  merge request.md
heat_exchanger_control/: aae_experiment.toml  controllers.py
pwt_control/: aae_experiment.toml  controllers.py  main.py  preparation.toml  pwt_config.toml  pwt_controller.py
pwt_control/config/: experiment_config.toml  pwt_state_config.toml
pwt_control/environment/: glt_hnht_only.json  pwt.py
pwt_control/environments/: glt_hnht_only.json  hnht_state_config.toml  prepare.py  prepare_hnht.json  pwt.py  pwt_state_config.toml
pwt_control/results/experiment_aae_3d/: live_run_test_000-01_episode_raw.csv
pwt_control/scenarios/: 20250603_produktion_10min.csv  20250603_produktion_10min_0926.csv  20250603_produktion_10min_1001.csv  20250603_produktion_Test.csv  20250603_produktion_Test_2.csv  20251006_vergleichsproduktion_1001.csv  ETAFactory_HNHT_ScenarioData_LiveScenario.csv  beispielverlauf.csv
